--- a/3.4 Birthday Invite Project/index.html
+++ b/3.4 Birthday Invite Project/index.html
@@ -1,5 +1,14 @@
-<!-- Example image URL -->
-https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg
+<h1>It's my Birthday!</h1>
+<h2>on the 25th December</h2>
 
-<!-- Example Google Maps Link -->
-https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656
+<img src="https://media0.giphy.com/media/ljuSksqL9j0yI/200w.gif?cid=6c09b952pjflru9m70y9ptyr6jigtlavnr5uu5idjrqslfdj&ep=v1_gifs_search&rid=200w.gif&ct=g" width="300" height="299" />
+
+<h3>Things to bring :</h3>
+<ul>
+    <li>gifts</li>
+    <li>chocolates</li>
+    <li>your blessings</li>
+</ul>
+
+<h3>Location :</h3>
+<a href="https://maps.app.goo.gl/HS4pYQfKWmvnJMb68">party location</a>
