--- a/3.3 Image Elements/index.html
+++ b/3.3 Image Elements/index.html
@@ -1,6 +1,6 @@
-<!-- Kitten image URL -->
-https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg
+<h1>I am a Cat person</h1>>
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg" alt="person holding a kitten in hands"/>
 
 
-<!-- Puppy image URL -->
-https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif
+<h1>I am a Dog person</h1>>
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif" alt="puppy digging through sand" />
