--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -17,23 +17,26 @@ But it must have the following features:
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link
-  rel="stylesheet"
-  href="./style.css"
-  />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
-</head>
-<body>
- <div>
-  <img src="./assets/images/daenerys.jpeg" alt="lady standing with an antique piece in her hands"/>
-  <h1>THAT SPECIAL MOMENT</h1>
-  <p>When you find the perfect avocado in the supermarket</p>
-</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div>
+      <img
+        src="./assets/images/daenerys.jpeg"
+        alt="lady standing with an antique piece in her hands"
+      />
+      <h1>That Special Moment</h1>
+      <p>When you find the perfect avocado in the supermarket</p>
+    </div>
+  </body>
 </html>
