--- a/4.1 Webpages/index.html
+++ b/4.1 Webpages/index.html
@@ -1,5 +1,10 @@
 <h1>Welcome to My Website!</h1>
 <!-- Add an image of yourself that links to the about page -->
+<img src="./assets/images/cat.png"/>
 
 <hr />
 <!-- Add a link to your contact me page here -->
+<a href="./public/contact.html">Contact</a>
+&nbsp;  
+<!-- keyword for space in HTML -->
+<a href="./public/about.html">About</a>
